--- a/index.html
+++ b/index.html
@@ -74,6 +74,41 @@
           and to ensure our advertising services are working correctly.
         </li>
       </ul>
+
+      <h2>How to Request Data Deletion</h2>
+      <p>
+        You have the right to request the deletion of the personal information
+        we have collected from you. The main piece of information we collect is
+        the email address you may voluntarily provide for future game testing.
+      </p>
+      <p>
+        To request the deletion of your email address from our testing list,
+        please follow these steps:
+      </p>
+      <ul>
+        <li>
+          Navigate to our data management page here:
+          <a href="https://sunny-test-web.netlify.app" target="_blank">here</a>
+        </li>
+        <li>
+          Enter the name or username and the email address that you wish to have
+          removed.
+        </li>
+        <li>
+          In the main message box, please type the phrase "Request for data
+          deletion".
+        </li>
+        <li>Click "Send" to submit your request.</li>
+      </ul>
+      <p>
+        We will process your request in a timely manner and permanently remove
+        your email address from our records.
+      </p>
+      <p>
+        "Alternatively, you can send an email with the subject line 'Data
+        Deletion Request' to our support address at
+        randomchaosmechanicsstudio@gmail.com."
+      </p>
       <footer>
         <p>Find us on:</p>
         <a
