--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="main.css" />
   </head>
@@ -88,7 +89,11 @@
       <ul>
         <li>
           Navigate to our data management page here:
-          <a href="https://sunny-test-web.netlify.app" target="_blank">here</a>
+          <a
+            href="https://garrisonmark.github.io/game-test-sign-up/"
+            target="_blank"
+            >here</a
+          >
         </li>
         <li>
           Enter the name or username and the email address that you wish to have
@@ -116,15 +121,15 @@
           target="_blank"
           >Reddit</a
         >
-        |
+
         <a
           href="https://www.instagram.com/green___maker?igsh=cjN6ZXNteDlqNWJ5"
           target="_blank"
           >Instagram</a
         >
-        |
+
         <a href="https://pin.it/37vyZ9dBE" target="_blank">Pinterest</a>
-        <p>
+        <p class="contact-info">
           Contact Us:
           <a href="mailto:randomchaosmechanicsstudios@gmail.com"
             >randomchaosmechanicsstudios@gmail.com</a
