(game, app ,website, applcation)
(game, app ,website, applcation)

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <h1>Privacy Policy</h1>
       <p class="container">
         this Privacy Policy describes how Random Chaos Mechanics Studios ("we",
-        "us", or "our") collects, uses, and discloses information when you play
-        our game, Match Chaos.
+        "us", or "our") collects, uses, and discloses information when you
+        interact with our (game, app ,website, applcation).
       </p>
       <h2>Information We Collect</h2>
       <h3>a) Information You Voluntarily Provide</h3>
       <p>
-        Currently, playing Match Chaos does not require you to provide any
-        direct personal information.
+        Currently, playing (game, app ,website, applcation) does not require you
+        to provide any direct personal information.
       </p>
       <p>
         In the future, we plan to offer an option to sign up for testing our
@@ -35,17 +35,17 @@
       </ul>
       <p>
         Providing this information is completely voluntary and is not required
-        to play Match Chaos. You would only provide it if you wish to be
-        contacted about future testing opportunities.
+        to play (game, app ,website, applcation). You would only provide it if
+        you wish to be contacted about future testing opportunities.
       </p>
 
       <h3>b) Information Collected Automatically by Third Parties</h3>
       <p>
         Even if you do not provide information to us directly, our third-party
         partners (specifically Google) automatically collect certain information
-        when you play our game. This is necessary to deliver advertisements that
-        support the game and to analyze our game's performance. This information
-        includes:
+        when you play our (game, app ,website, applcation). This is necessary to
+        deliver advertisements that support the game and to analyze our game's
+        performance. This information includes:
       </p>
       <ul>
         <li>
@@ -60,14 +60,14 @@
       <ul>
         <li>
           To Serve Advertisements: The data collected automatically by our
-          partner, Google, is used to provide personalized ads within the game,
-          which keeps the game free to play.
+          partner, Google, is used to provide personalized ads within the (game,
+          app ,website, applcation), which keeps the game free to play.
         </li>
         <li>
-          To Contact You for Game Testing: If you voluntarily sign up for our
-          game testing program, we will use the email address you provide to
-          send you invitations and information related to testing our future
-          games.
+          To Contact You for (game, app ,website, applcation) Testing: If you
+          voluntarily sign up for our game testing program, we will use the
+          email address you provide to send you invitations and information
+          related to testing our future games.
         </li>
         <li>
           To Maintain and Improve Our Services: We use the automatically
@@ -80,7 +80,8 @@
       <p>
         You have the right to request the deletion of the personal information
         we have collected from you. The main piece of information we collect is
-        the email address you may voluntarily provide for future game testing.
+        the email address you may voluntarily provide for future (game, app
+        ,website, applcation) testing.
       </p>
       <p>
         To request the deletion of your email address from our testing list,
